spring-security/k8s-resources/spring-security.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    checksum/config: ${CHECKSUM}
  labels:
    app: spring-security
  name: spring-security
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-security
  strategy: {}
  template:
    metadata:
      annotations:
        checksum/config: ${CHECKSUM}
      labels:
        app: spring-security
    spec:
      containers:
      - image: spring-security:1.0.0-SNAPSHOT # Replace with actual Docker image in a registry
        name: spring-security
        resources: {}
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 9000
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 9000
        volumeMounts:
          - name: truststore-volume
            readOnly: true
            mountPath: "/mnt/"
      volumes:
        - name: truststore-volume
          secret:
            secretName: i-trust-keycloak-secret
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    checksum/config: ${CHECKSUM}
  labels:
    app: spring-security
  name: spring-security
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: spring-security
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    checksum/config: ${CHECKSUM}
  labels:
    app: spring-security
  name: spring-security
spec:
  rules:
    - host: spring-security.${NAMESPACE}.${MINIKUBE_IP}.nip.io # Replace with SPRING_SECURITY_URL
      http:
        paths:
          - backend:
              service:
                name: spring-security
                port:
                  name: http
            path: /
            pathType: Prefix
